Added further text

--- a/Final_Project/Final_Project.ipynb
+++ b/Final_Project/Final_Project.ipynb
@@ -2274,28 +2274,62 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ceb2f8c9-da3a-4786-a057-2f40402afec9",
+   "cell_type": "markdown",
+   "id": "a4343874-c49e-4382-9afa-00ffea703c0c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "In our statistical exploration of airline passenger satisfaction, we applied predictive models to the variables in our Ordinary Least Squares (OLS) models, aiming to validate their associations with customer satisfaction levels. These models were instrumental in establishing the relationship between log-transformed flight distance and customer satisfaction, confirming the foundational hypothesis of Model 1. Further, in Models 2 to 5, we examined the interaction between satisfaction and additional variables such as age, gender, travel class, in-flight service quality, and travel delays. This comprehensive approach illuminated the complex dynamics at play: for instance, the predictive models suggested that certain demographics, service quality, and travel class significantly impact satisfaction. \n",
+    "\n",
+    "In examining the R-squared and adjusted R-squared values across the models, we observed variations in explanatory power, reflecting the multifaceted nature of factors affecting passenger satisfaction. Models incorporating a broader range of variables, particularly those related to in-flight experience and operational efficiency, showed enhanced predictive accuracy. These findings suggest that passenger satisfaction is not merely a function of travel duration but is also intricately linked to service quality, demographic factors, and travel conditions. The external validity of these models, reinforced through robustness checks, affirms their applicability across various airline industry contexts. This analysis underscores the importance of a holistic approach in evaluating passenger satisfaction, offering valuable insights for strategic decision-making aimed at optimizing the passenger experience."
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "c19afa7f-9cbc-4907-b6f9-2862d231f3d8",
    "metadata": {},
    "source": [
-    "## Part 5: Findings, Summary and Limitations"
+    "## Part 6: Causal interpretation / main summary"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "682e5923-044f-4839-ba94-28c4bd1cc829",
+   "cell_type": "markdown",
+   "id": "15d77603-1020-44f2-b661-77f32be92801",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "In our analysis of airline passenger satisfaction, we delved into the complex interplay of various factors, such as log-transformed flight distance, age, gender, class of travel, and in-flight service quality. Our findings, particularly from Model 3, revealed a significant correlation between satisfaction and class of travel, suggesting that passengers in higher classes (like Economy Plus) tend to report higher satisfaction. Additionally, Model 4 highlighted the crucial role of in-flight service factors, with variables like seat comfort and food quality showing a notable impact on satisfaction levels.\n",
+    "\n",
+    "However, the causal interpretation of these relationships is limited. While the regression models suggest strong associations—for example, a longer flight distance (Model 1) mildly correlating with satisfaction, and operational factors like travel delays (Model 5) impacting passenger experiences negatively—these findings are correlative rather than causative. The models, based on observational data, reveal patterns and associations but do not provide a strong factor of generalizability as can be noted by the low R values, possibly due other variables not included in this study.\n",
+    "\n",
+    "Therefore, while our study provides valuable insights into factors influencing passenger satisfaction, these insights should be interpreted as indicative trends rather than direct causes of satisfaction. Further research, potentially through experimental designs, would be required to explore these relationships in greater depth and establish causal links."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d698124-c1be-4cf5-8301-d8cb70f9c397",
+   "metadata": {},
+   "source": [
+    "## Part 7: Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcc7613d-f26d-4815-b0a8-f7fb2ab23c04",
+   "metadata": {},
+   "source": [
+    "Our comprehensive analysis of airline passenger satisfaction offers critical insights that can guide both business strategies and policy decisions in the airline industry. The study's findings illuminate key areas where airlines could focus to enhance passenger satisfaction.\n",
+    "\n",
+    "Interestingly, our analysis pointed to the nuanced impact of flight distance on satisfaction. This suggests that airlines operating longer flights have an opportunity to enhance passenger experience through additional services or amenities tailored for extended travel time.\n",
+    "\n",
+    "Firstly, the importance of travel class in determining satisfaction levels cannot be overstated. Passengers in higher travel classes, such as Economy Plus, reported higher satisfaction, indicating a clear preference for comfort and additional amenities. Airlines might consider improving the quality of services in economy classes or offering more competitive features in higher classes to appeal to a broader customer base.\n",
+    "\n",
+    "In-flight service quality, including seat comfort and food quality, also plays a pivotal role in shaping passenger experiences. Investments in improving these aspects could lead to a significant uptick in customer satisfaction. This could involve training for cabin crew, upgrades to seating, or enhancements in meal quality.\n",
+    "\n",
+    "Operational efficiency, particularly regarding travel delays, emerged as a critical factor. Delays were negatively associated with satisfaction, emphasizing the need for airlines to prioritize punctual departures and arrivals. Implementing efficient scheduling and contingency plans to minimize delays could be a key area of focus.\n",
+    "\n",
+    "However, it is crucial to recognize the limitations of our analysis in terms of establishing causality. While the identified associations are strong, they should be viewed as starting points for further investigation rather than definitive conclusions.\n",
+    "\n",
+    "In conclusion, our findings provide actionable insights for airlines to refine their service offerings, improve operational efficiency, and enhance overall customer satisfaction. These improvements, while requiring investment, could lead to increased customer loyalty, positive word-of-mouth, and ultimately, higher profitability in the competitive airline industry. Additionally, policymakers could use this information to inform regulations and standards aimed at improving the passenger experience across the industry."
+   ]
   },
   {
    "cell_type": "code",
