Changes to code, added documentation

--- a/Final_Project/Final_Project.ipynb
+++ b/Final_Project/Final_Project.ipynb
@@ -33,7 +33,7 @@
    "id": "6c4d2926-7660-4b42-8257-80a430151047",
    "metadata": {},
    "source": [
-    "This study focuses on analyzing customer satisfaction among airline passengers, with an emphasis on understanding how flight distance and other variables influence this satisfaction. Utilizing a dataset from the Maven Analytics data playground, which includes various factors such as age, class of travel, type of travel, and in-flight services, the analysis aims to uncover patterns and relationships within the data. The dependent variable, customer satisfaction, is measured as a binary outcome, where 'Satisfied' responses are coded as 1, and all other responses are coded as 0. The primary explanatory variable of interest is flight distance, alongside control variables like age, class, type of travel, and various in-flight service ratings.\n",
+    "This study focuses on analyzing customer satisfaction among airline passengers, with an emphasis on understanding how flight distance and other variables influence this satisfaction. Utilizing a dataset from the Maven Analytics data playground, which includes various factors such as age, class of travel, type of travel, and in-flight services and more, the analysis aims to uncover patterns and relationships within the data. The dependent variable, customer satisfaction, is measured as a binary outcome, where 'Satisfied' responses are coded as 1, and all other responses are coded as 0. The primary explanatory variable of interest is flight distance, alongside control variables like age, class, type of travel, and various in-flight service ratings.\n",
     "\n",
     "The methodology involves an initial exploratory data analysis (EDA) to understand the distributions of key variables and identify any potential data quality issues. Following this, linear regression models are developed. Special attention is paid to addressing multicollinearity by excluding one category in dummy variables and ensuring the correct data types for regression analysis."
    ]
@@ -86,11 +86,10 @@
    "id": "d7168e18-6da6-4e1d-8ac3-eaa14b8dc283",
    "metadata": {},
    "source": [
-    "In an era where the airline industry is rapidly evolving with advancements in technology and changing consumer preferences, understanding the factors that drive passenger satisfaction is vital. Air travel, once a luxury, has now become a common mode of transportation, bringing with it the challenge of maintaining high levels of customer satisfaction. The airline industry faces a unique set of challenges, ranging from operational efficiency and safety to enhancing passenger experience. In this dynamic context, the Airline Passenger Satisfaction (APS) Survey emerges as a critical measure, reflecting how airlines meet or exceed passenger expectations in various aspects of their service.\n",
+    "In the current period marked by swift evolution in the airline industry, propelled by technological advancements and shifts in consumer preferences, grasping the determinants of passenger satisfaction is essential. Air travel, which was once considered a luxury, has transformed into a widely used mode of transport, presenting the challenge of upholding high standards of customer satisfaction. The airline sector is faced with a distinct array of challenges, encompassing aspects like operational efficiency, safety, and the enhancement of the passenger experience. Moreover, similar to other industries, it is susceptible to the fluctuations of the economy and has been impacted by downturns, a notable recent example being the Covid pandemic. In such a dynamic setting, the Airline Passenger Satisfaction (APS) Survey, utilizing the maven analytics dataset, serves as a pivotal metric, indicating the extent to which airlines meet or surpass passenger expectations in various service facets. It is noteworthy, however, that while this dataset is comprehensive, it omits specific details about airlines or flights, which complicates conducting more detailed analyses of the study's results in subsequent sections.\n",
     "\n",
     "This study aims to:\n",
     "\n",
-    "- Examine the key drivers of Airline Passenger Satisfaction (APS) across a diverse range of airlines.\n",
     "- Analyze the correlation between APS and flight distance, considering the impact of longer flights on passenger satisfaction.\n",
     "- Explore the relationship between APS and various factors such as age, class of travel, type of travel, and in-flight services.\n",
     "- Investigate the role of in-flight amenities, such as seat comfort, leg room, food and drink, and in-flight entertainment, in shaping passenger satisfaction.\n",
@@ -104,7 +103,7 @@
     "- Demographic factors, such as age and gender, might exhibit specific trends in terms of preferences and satisfaction levels.\n",
     "- Delays may influence the perception of passenger regarding the quality of the flight.\n",
     "\n",
-    "The outcomes of this study are expected to provide valuable insights into the airline industry's efforts to enhance passenger satisfaction, contributing to strategies that cater to diverse passenger needs and preferences in the ever-evolving landscape of air travel."
+    "The outcomes of this study are expected to provide insights into the airline industry's efforts to enhance passenger satisfaction, contributing to strategies that cater to diverse passenger needs and preferences in the ever-evolving, and sometimes hectic landscape of air travel."
    ]
   },
   {
@@ -124,7 +123,7 @@
     "\n",
     "**Primary Dependent Variable:**\n",
     "\n",
-    "The primary dependent variable for this study is airline passenger satisfaction, represented as a binary outcome in the `satisfied_customer` variable, where '1' indicates satisfaction and '0' represents neutral or dissatisfied responses. This binary format simplifies the interpretation of the logistic regression analysis. \n",
+    "The primary dependent variable for this study is airline passenger satisfaction, represented as a binary outcome in the 'satisfied_customer' variable, where '1' indicates satisfaction and '0' represents neutral or dissatisfied responses. This binary format simplifies the interpretation of the logistic regression analysis. \n",
     "\n",
     "**Explanatory Variable:**\n",
     "- **Flight Distance:** The primary factor of interest, measuring the length of the flight in miles.\n",
@@ -1828,9 +1827,9 @@
    "id": "40d7689f-3e69-425e-a36b-349531d03bca",
    "metadata": {},
    "source": [
-    "In this section of the study, we aim to validate and quantify the impact of each group of variables identified in \"Part 1\" on airline passenger satisfaction. The Exploratory Data Analysis (EDA) phase revealed certain key insights, particularly the right-skewed distribution of flight length. To address this skewness and normalize the data for more effective modeling, we will apply a logarithmic transformation to the flight length variable.\n",
+    "In this segment of our research, our objective is to authenticate and measure the influence of each category of variables outlined in \"Part 1\" on airline passenger contentment. The Exploratory Data Analysis (EDA) phase unveiled several crucial findings, notably the pronounced right-skewed distribution of flight length. To counteract this skewness and normalize the data, thereby facilitating more efficacious modeling, we shall implement a logarithmic transformation to the flight length variable.\n",
     "\n",
-    "Our approach involves employing simple linear regression models to investigate the relationships between the transformed flight length and other explanatory variables with passenger satisfaction. We will utilize heteroscedasticity-consistent standard error estimators, specifically the HC1 covariance type. This choice of covariance estimator is designed to provide more reliable standard errors under heteroscedasticity, thus enhancing the credibility and interpretability of our regression results."
+    "Our methodology entails the application of simple linear regression models to scrutinize the correlations between the transformed flight length and other explanatory variables, and their impact on passenger satisfaction. We will employ heteroscedasticity-consistent standard error estimators, specifically opting for the HC1 covariance type. This selection is strategically made to yield more reliable standard errors in the presence of heteroscedasticity, thereby augmenting the validity and interpretability of our regression outcomes."
    ]
   },
   {
@@ -2296,11 +2295,11 @@
    "id": "15d77603-1020-44f2-b661-77f32be92801",
    "metadata": {},
    "source": [
-    "In our analysis of airline passenger satisfaction, we delved into the complex interplay of various factors, such as log-transformed flight distance, age, gender, class of travel, and in-flight service quality. Our findings, particularly from Model 3, revealed a significant correlation between satisfaction and class of travel, suggesting that passengers in higher classes (like Economy Plus) tend to report higher satisfaction. Additionally, Model 4 highlighted the crucial role of in-flight service factors, with variables like seat comfort and food quality showing a notable impact on satisfaction levels.\n",
+    "In our comprehensive exploration of airline passenger contentment, we meticulously examined the intricate interplay of a myriad of factors, encompassing the log-transformed distance of flights, age, gender, the various classes of travel, and the caliber of in-flight services. Our investigation, particularly focused on Model 3, unearthed a significant correlation between the level of satisfaction expressed by passengers and their class of travel. This finding suggests that passengers situated in superior travel classes, such as Economy Plus, tend to report heightened levels of satisfaction. Additionally, Model 4 shed light on the pivotal role played by in-flight service elements, with variables such as seat comfort and the quality of food demonstrating a pronounced influence on the satisfaction levels of passengers.\n",
     "\n",
-    "However, the causal interpretation of these relationships is limited. While the regression models suggest strong associations—for example, a longer flight distance (Model 1) mildly correlating with satisfaction, and operational factors like travel delays (Model 5) impacting passenger experiences negatively—these findings are correlative rather than causative. The models, based on observational data, reveal patterns and associations but do not provide a strong factor of generalizability as can be noted by the low R values, possibly due other variables not included in this study.\n",
+    "Nonetheless, it is imperative to acknowledge the limitations in the causal interpretation of these relationships. While our regression models do suggest robust associations—for instance, an extended flight distance (as elucidated in Model 1) exhibiting a mild correlation with heightened satisfaction, and operational elements like travel delays (as depicted in Model 5) adversely affecting passenger experiences. These conclusions are predominantly correlative rather than causative in nature. Given that our models are predicated on observational data, they are adept at revealing patterns and associations, but they fall short in providing a robust degree of generalizability, as is evidenced by the relatively low R values. This limitation may be attributable to the potential exclusion of other pertinent variables not encompassed within the scope of this study.\n",
     "\n",
-    "Therefore, while our study provides valuable insights into factors influencing passenger satisfaction, these insights should be interpreted as indicative trends rather than direct causes of satisfaction. Further research, potentially through experimental designs, would be required to explore these relationships in greater depth and establish causal links."
+    "Thus, while our research offers valuable insights into the plethora of factors that influence passenger satisfaction, it is crucial to interpret these findings as indicative trends rather than definitive causes of satisfaction. To unravel these relationships with greater precision and establish causal connections, further research is warranted. This subsequent inquiry could potentially adopt experimental designs, which would facilitate a more in-depth exploration and understanding of these intricate dynamics."
    ]
   },
   {
@@ -2316,19 +2315,19 @@
    "id": "bcc7613d-f26d-4815-b0a8-f7fb2ab23c04",
    "metadata": {},
    "source": [
-    "Our comprehensive analysis of airline passenger satisfaction offers critical insights that can guide both business strategies and policy decisions in the airline industry. The study's findings illuminate key areas where airlines could focus to enhance passenger satisfaction.\n",
+    "Our exhaustive investigation into airline passenger satisfaction yields essential insights, pivotal for guiding both strategic business initiatives and policy formulations within the airline industry. The results of our study cast light on critical aspects that airlines might target to augment passenger satisfaction.\n",
     "\n",
-    "Interestingly, our analysis pointed to the nuanced impact of flight distance on satisfaction. This suggests that airlines operating longer flights have an opportunity to enhance passenger experience through additional services or amenities tailored for extended travel time.\n",
+    "Our analysis intriguingly revealed a subtle yet impactful influence of flight distance on satisfaction. This highlights an opportunity for airlines operating longer flights to boost passenger experience, potentially through augmented services or amenities specifically designed for prolonged travel durations.\n",
     "\n",
-    "Firstly, the importance of travel class in determining satisfaction levels cannot be overstated. Passengers in higher travel classes, such as Economy Plus, reported higher satisfaction, indicating a clear preference for comfort and additional amenities. Airlines might consider improving the quality of services in economy classes or offering more competitive features in higher classes to appeal to a broader customer base.\n",
+    "Foremost, the significance of travel class in shaping satisfaction levels is profound. Passengers in premium classes, such as Economy Plus, consistently reported elevated satisfaction levels. This underscores a pronounced preference for enhanced comfort and additional amenities. Airlines might contemplate enhancements in service quality within economy classes or introducing more enticing features in premium classes to attract a wider spectrum of passengers.\n",
     "\n",
-    "In-flight service quality, including seat comfort and food quality, also plays a pivotal role in shaping passenger experiences. Investments in improving these aspects could lead to a significant uptick in customer satisfaction. This could involve training for cabin crew, upgrades to seating, or enhancements in meal quality.\n",
+    "The quality of in-flight services, encompassing aspects like seat comfort and food quality, is also instrumental in crafting passenger experiences. Investment in elevating these facets is likely to lead to a notable increase in customer satisfaction. Such improvements could include advanced training for cabin crew, seating upgrades, or refining the quality of meals provided.\n",
     "\n",
-    "Operational efficiency, particularly regarding travel delays, emerged as a critical factor. Delays were negatively associated with satisfaction, emphasizing the need for airlines to prioritize punctual departures and arrivals. Implementing efficient scheduling and contingency plans to minimize delays could be a key area of focus.\n",
+    "Operational efficiency, especially in the context of travel delays, is a crucial determinant. Delays were found to have a negative correlation with satisfaction, underscoring the imperative for airlines to focus on timely departures and arrivals. The adoption of efficient scheduling and the formulation of effective contingency strategies to curtail delays could become a central focus.\n",
     "\n",
-    "However, it is crucial to recognize the limitations of our analysis in terms of establishing causality. While the identified associations are strong, they should be viewed as starting points for further investigation rather than definitive conclusions.\n",
+    "Nonetheless, it is essential to acknowledge the constraints of our analysis in deducing causality. While the associations identified are robust, they ought to be perceived as precursors for further research rather than conclusive evidence.\n",
     "\n",
-    "In conclusion, our findings provide actionable insights for airlines to refine their service offerings, improve operational efficiency, and enhance overall customer satisfaction. These improvements, while requiring investment, could lead to increased customer loyalty, positive word-of-mouth, and ultimately, higher profitability in the competitive airline industry. Additionally, policymakers could use this information to inform regulations and standards aimed at improving the passenger experience across the industry."
+    "In summary, our study offers valuable, actionable insights for airlines to refine their service offerings, boost operational efficiency, and ultimately enhance customer satisfaction. Such enhancements, albeit necessitating investment, can lead to increased customer loyalty, favorable referrals, and consequently, heightened profitability in the competitive realm of the airline industry. Moreover, these insights can be instrumental for policymakers in developing regulations and standards aimed at elevating the passenger experience industry-wide."
    ]
   },
   {
