Added Finishing Touches

--- a/Final_Project/Final_Project.ipynb
+++ b/Final_Project/Final_Project.ipynb
@@ -170,7 +170,7 @@
    "outputs": [],
    "source": [
     "# Load the dataset\n",
-    "file_path_airline = 'airline_passenger_satisfaction.csv'\n",
+    "file_path_airline = 'https://raw.githubusercontent.com/MarcellM01/Data_Analysis_2/main/Final_Project/airline_passenger_satisfaction.csv'\n",
     "airline_data = pd.read_csv(file_path_airline)"
    ]
   },
@@ -2076,7 +2076,7 @@
        "<tr><td colspan=\"6\" style=\"border-bottom: 1px solid black\"></td></tr><tr><td style=\"text-align: left\">Note:</td><td colspan=\"5\" style=\"text-align: right\"><sup>*</sup>p&lt;0.1; <sup>**</sup>p&lt;0.05; <sup>***</sup>p&lt;0.01</td></tr></table>"
       ],
       "text/plain": [
-       "<stargazer.stargazer.Stargazer at 0x19d10f8ab10>"
+       "<stargazer.stargazer.Stargazer at 0x19a0d670150>"
       ]
      },
      "execution_count": 26,
